// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyView > renders correctly 1`] = `
<div
  class="text-center py-5 mx-auto"
  data-v-8b15b0cc=""
>
  <img
    alt="empty-view-img"
    class="empty-state__image"
    data-v-8b15b0cc=""
    id="empty-state__img"
    src="imageAsset"
  />
  <div
    class="font-weight-regular mb-2 empty-view-text text-headline-small mt-6"
    data-v-8b15b0cc=""
    id="empty-state__header"
  >
    Header
  </div>
  <div
    class="text-secondary-text text-body-medium mb-6"
    data-v-8b15b0cc=""
    id="empty-state__description"
  >
    <span
      data-v-8b15b0cc=""
    >
      description
    </span>
    
    
  </div>
  <evocon-v-button-stub
    class="mx-1"
    color=""
    data-v-8b15b0cc=""
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    iconcolor=""
    id="empty-state__tertiary-button"
    text="tertiary"
    textclass=""
    type="primary"
  />
  <evocon-v-button-stub
    class="mx-1"
    color="quaternary-dark"
    data-v-8b15b0cc=""
    icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
    iconcolor=""
    id="empty-state__secondary-button"
    text="secondary"
    textclass=""
    type="primary"
  />
  <evocon-v-button-stub
    class="mx-1"
    color="quaternary-dark"
    data-v-8b15b0cc=""
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    iconcolor=""
    id="empty-state__primary-button"
    text="primary"
    textclass=""
    type="primary"
  />
</div>
`;

exports[`EmptyView > renders correctly in small version 1`] = `
<div
  class="text-center py-5 mx-auto"
  data-v-8b15b0cc=""
>
  <img
    alt="empty-view-img"
    class="empty-state__image"
    data-v-8b15b0cc=""
    id="empty-state__img"
    src="imageAsset"
  />
  <div
    class="font-weight-regular mb-2 empty-view-text text-body-large mt-2"
    data-v-8b15b0cc=""
    id="empty-state__header"
  >
    Header
  </div>
  <div
    class="text-secondary-text text-body-small mb-4"
    data-v-8b15b0cc=""
    id="empty-state__description"
  >
    <span
      data-v-8b15b0cc=""
    >
      description
    </span>
    
    
  </div>
  <evocon-v-button-stub
    class="mx-1"
    color=""
    data-v-8b15b0cc=""
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    iconcolor=""
    id="empty-state__tertiary-button"
    text="tertiary"
    textclass=""
    type="primary"
  />
  <evocon-v-button-stub
    class="mx-1"
    color="quaternary-dark"
    data-v-8b15b0cc=""
    icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
    iconcolor=""
    id="empty-state__secondary-button"
    text="secondary"
    textclass=""
    type="primary"
  />
  <evocon-v-button-stub
    class="mx-1"
    color="quaternary-dark"
    data-v-8b15b0cc=""
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    iconcolor=""
    id="empty-state__primary-button"
    text="primary"
    textclass=""
    type="primary"
  />
</div>
`;
